# mac-wallpaper-tui

./: Cargo.toml  README.md
src/: app.rs  config.rs  database.rs  kitty.rs  main.rs  preview.rs  terminal.rs  ui.rs
