[package]
name = "mac-wallpaper-tui"
version = "0.1.0"
edition = "2021"
description = "A TUI wallpaper manager for macOS"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Image handling
ratatui-image = { version = "5.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Utilities
dirs = "5.0"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
rand = "0.8"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
